--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
   "author": "blockchainnomad <40536266+blockchainnomad@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.6.0",
     "canvas": "^2.9.1",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.7",
+    "hardhat": "^2.9.6",
+    "hardhat-deploy": "^0.11.10",
     "nft.storage": "^6.3.0"
   },
   "volta": {
-    "node": "18.2.0"
+    "node": "16.15.0"
   },
   "dependencies": {
     "dotenv": "^16.0.1"
